--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -21,6 +22,11 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                   <items>
+                        <MenuItem mnemonicParsing="false" text="Change Size">
+                           <graphic>
+                              <TextField fx:id="sizeField" onAction="#changeSize" />
+                           </graphic>
+                        </MenuItem>
                     <MenuItem mnemonicParsing="false" text="Change Color">
                            <graphic>
                               <ColorPicker fx:id="colorPicker" onAction="#changeColor" />
