--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -38,6 +39,14 @@
                     <MenuItem mnemonicParsing="false" text="About" />
                   </items>
                 </Menu>
+                  <Menu mnemonicParsing="false" text="Font">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                    </items>
+                     <graphic>
+                        <ChoiceBox fx:id="choiceBox" prefWidth="150.0" />
+                     </graphic>
+                  </Menu>
               </menus>
             </MenuBar>
             <TextArea fx:id="textArea" prefHeight="1000.0" prefWidth="800.0" />
